# combMath2026

./: README.md
lab1/: CMakeLists.txt  main.cpp  salesman.hpp
lab1/data/: matrix.txt  matrix10.txt
lab1/tests/: Example.bat  run_tests.sh  test_salesman.cpp
lab2/: CMakeLists.txt  main.cpp  team.hpp
lab2/data/: skills1.txt
lab2/tests/: test_team.cpp
